--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body
 }
 
 
-    .1s
+    .excercises
     {
     width: 1050px;
     height: 100px;
@@ -87,24 +87,24 @@ body
     color: #3a3d4c;
     margin: 0px auto;
     margin-bottom: 300px;
-    margin-top: 300px;
+    margin-top: 25px;
     }
 
-.1s h1
+.excercises h1
 {
     font-family: sans-serif;
     color: #ffffff;
     margin: 1px auto;
 }
 
-.1s p
+.excercises p
 {
     font-family: Arial, Helvetica, sans-serif;
     color: #cfcfcf;
     margin: 1px auto;
 }
 
-.1s selection button
+.excercises selection button
     {
     width: 1050px;
     height: 100px;
@@ -113,32 +113,32 @@ body
     margin: 0px auto;
     }
 
-    .2s
+    .selection
     {
     width: 1050px;
     height: 100px;
     background:#151515;
     color: #3a3d4c;
     margin: 0px auto;
-    margin-bottom: 300px;
-    margin-top: 300px;
+    margin-bottom: 50px;
+    margin-top: 50px;
     }
 
-.2s h1
+.selection h1
 {
     font-family: sans-serif;
     color: #ffffff;
     margin: 1px auto;
 }
 
-.2s p
+.selection p
 {
     font-family: Arial, Helvetica, sans-serif;
     color: #cfcfcf;
     margin: 1px auto;
 }
 
-.2s selection button
+.selection button
     {
     width: 1050px;
     height: 100px;
@@ -146,3 +146,17 @@ body
     color: #ffffff;
     margin: 0px auto;
     }
+
+.selection button h1
+{
+    font-family: sans-serif;
+    color: #ffffff;
+    margin: 1px auto;
+}
+
+.pages button p
+{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
+    margin: 1px auto;
+}
